kubernetes/pod_django_app.yaml
apiVersion : v1
kind: Pod
metadata:
 name: django-app
 labels:
  env : prod
  app : main
  tier : backend
  owner: Ya
spec:
 containers:
  - name : container-django
    image: django_app:devman
    ports:
     - containerPort: 80
