kubernetes/django_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app.kubernetes.io/name: django-deploy
    app.kubernetes.io/instance: django-app-mini
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-deploy
      app.kubernetes.io/instance: django-app-mini
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-deploy
        app.kubernetes.io/instance: django-app-mini
    spec:
      containers:
        - name: container-django
          image: django_app:devman
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app.kubernetes.io/name: django-deploy
  ports:
    - name: traffic-service
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
