kubernetes/pod_service_django_app.yaml
apiVersion : v1
kind: Pod
metadata:
  name: django-app
  labels:
   app.kubernetes.io/name: django-app
   app.kubernetes.io/instance: django-app-mini
spec:
 containers:
  - name : container-django
    image: django_app:devman
    ports:
     - containerPort: 80
---

apiVersion : v1
kind: Service
metadata:
  name: django-service
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-app-mini
spec:
  selector:
    app.kubernetes.io/name: django-app
  ports:
    - name: traffic-service
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
